<resources>
    <string name="app_name">Amigo Oculto</string>
    <string name="titulo_amigo_oculto">Amigo Oculto</string>
    <string name="adicione_os_participantes_do_amigo_oculto">Adicione os participantes do Amigo Oculto</string>
    <string name="adicionar_participante">Adicionar participante</string>
    <string name="novo_participante">Novo Participante</string>
    <string name="adicione_um_nome">Adicione um Nome</string>
    <string name="cancelar">Cancelar</string>
    <string name="concluir">Concluir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sortear">sortear</string>
    <string name="reverter_sorteio">reverter sorteio</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="atencao">Atenção!</string>
    <string name="ok">ok</string>
    <string name="toque_para_revelar">toque para revelar</string>
    <string name="revelar_amigo_oculto">Revelar amigo oculto</string>
    <string name="revelar_amigo_secreto">Revelar Amigo Secreto</string>
    <string name="insira_o_codigo">Insira o Código</string>
    <string name="revelar">revelar</string>
</resources>