<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_4"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <View
                android:id="@+id/view_title"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:background="@color/blue_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kulim_park"
                android:text="@string/novo_participante"
                android:textColor="@color/gray_10"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/view_title"
                app:layout_constraintEnd_toEndOf="@id/view_title"
                app:layout_constraintStart_toStartOf="@id/view_title"
                app:layout_constraintTop_toTopOf="@id/view_title"

                />

            <EditText
                android:id="@+id/edt_participant_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:autofillHints="null"
                android:hint="@string/adicione_um_nome"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/gray_10"
                android:textColorHint="@color/gray_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_title" />

            <Button
                android:id="@+id/btn_cancell_new_participant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:text="@string/cancelar"
                app:layout_constraintEnd_toStartOf="@id/btn_conclude_new_participant"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_participant_name" />

            <Button
                android:id="@+id/btn_conclude_new_participant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/concluir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_cancell_new_participant"
                app:layout_constraintTop_toTopOf="@id/btn_cancell_new_participant" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>